Install and configure a decoupled Symfony

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /vendor
 /.idea
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/apps/SymfonyClient/config/secrets/prod/prod.decrypt.private.php
+/apps/SymfonyClient/public/bundles/
+/apps/SymfonyClient/var/
+###< symfony/framework-bundle ###
