Add phpunit, create basic configuration and add silly test

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /apps/SymfonyClient/public/bundles/
 /apps/SymfonyClient/var/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+/build/
+###< phpunit/phpunit ###
