--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.2"
   }
 }
