--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,9 @@
         <include>
             <directory>src</directory>
         </include>
+        <exclude>
+            <directory>src/Shared</directory>
+        </exclude>
     </source>
 
     <logging>
