--- a/apps/SymfonyClient/config/services.yaml
+++ b/apps/SymfonyClient/config/services.yaml
@@ -20,3 +20,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Shared\Infrastructure\Symfony\Controller\ApiExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onException }
