Add Symfony messenger component, add command and query bus, set command bus as default

--- a/apps/SymfonyClient/config/services.yaml
+++ b/apps/SymfonyClient/config/services.yaml
@@ -11,15 +11,26 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    # Namespace definitions
     SymfonyClient\:
         resource: '../src/'
     Shared\:
         resource: '../../../src/Shared/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Controller
     Shared\Infrastructure\Symfony\Controller\ApiExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onException }
+
+    # Message busesShared\Infrastructure\Bus\Query
+    Shared\Infrastructure\Symfony\Bus\Query\SymfonyQueryBus:
+        arguments:
+            $bus: '@query.bus'
+
+    _instanceof:
+        Shared\Application\Bus\Command\CommandHandler:
+            tags:
+                - { name: messenger.message_handler, bus: command.bus }
+        Shared\Application\Bus\Query\QueryHandler:
+            tags:
+                - { name: messenger.message_handler, bus: query.bus }
