Update README, create health route

--- a/apps/SymfonyClient/config/routes.yaml
+++ b/apps/SymfonyClient/config/routes.yaml
@@ -1,5 +1,9 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: SymfonyClient\Controller
-    type: attribute
+#controllers:
+#    resource:
+#        path: ../src/Controller/
+#        namespace: SymfonyClient\Controller
+#    type: attribute
+health:
+    path: /
+    controller: SymfonyClient\Controller\HealthController
+    methods: [GET]
