Add Backoffice namespace

--- a/apps/SymfonyClient/config/services.yaml
+++ b/apps/SymfonyClient/config/services.yaml
@@ -16,6 +16,8 @@ services:
         resource: '../src/'
     Shared\:
         resource: '../../../src/Shared/'
+    Backoffice\:
+        resource: '../../../src/Backoffice/'
 
     # Controller
     Shared\Infrastructure\Symfony\Controller\ApiExceptionListener:
