Create first use case with dummy repository

--- a/apps/SymfonyClient/config/routes.yaml
+++ b/apps/SymfonyClient/config/routes.yaml
@@ -2,3 +2,8 @@ health:
     path: /health
     controller: SymfonyClient\Controller\HealthController
     methods: [GET]
+
+create-user:
+    path: /user
+    controller: SymfonyClient\Controller\CreateUserController
+    methods: [POST]
